--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ Configuration edit s*.class
 WebContent/
 
 out/
-.idea
+.idea/
+.idea/workspace.xml
 *.jar
 *.war
 *.ear
@@ -16,3 +17,4 @@ out/
 *.iml
 *.log
 src/main/resources/properties/hibernate.properties
+.idea/vcs.xml
